err/infi.diskmanagement.err
Listing '.'...
Listing './bin'...
Compiling './bin/clear_comtypes_cache.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Logbook-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/capacity'...
Listing './lib/python3.5/site-packages/capacity-1.3.8.egg-info'...
Listing './lib/python3.5/site-packages/comtypes'...
Listing './lib/python3.5/site-packages/comtypes/client'...
Listing './lib/python3.5/site-packages/comtypes/server'...
Listing './lib/python3.5/site-packages/comtypes/test'...
Listing './lib/python3.5/site-packages/comtypes/tools'...
Listing './lib/python3.5/site-packages/comtypes-1.1.4.egg-info'...
Listing './lib/python3.5/site-packages/emport'...
Listing './lib/python3.5/site-packages/emport-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/infi'...
Listing './lib/python3.5/site-packages/infi/cwrap'...
Listing './lib/python3.5/site-packages/infi/devicemanager'...
Listing './lib/python3.5/site-packages/infi/devicemanager/cfgmgr32'...
Listing './lib/python3.5/site-packages/infi/devicemanager/ioctl'...
Listing './lib/python3.5/site-packages/infi/devicemanager/setupapi'...
Listing './lib/python3.5/site-packages/infi/diskmanagement'...
Listing './lib/python3.5/site-packages/infi/diskmanagement/disk'...
Compiling './lib/python3.5/site-packages/infi/diskmanagement/disk/__init__.py'...
***   File "./lib/python3.5/site-packages/infi/diskmanagement/disk/__init__.py", line 21
    PARTITION_BASIC_DATA_GUID = GUID(Data1=0xEBD0A0A2L, Data2=0xB9E5, Data3=0x4433,
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/infi/diskmanagement/ioctl'...
Compiling './lib/python3.5/site-packages/infi/diskmanagement/ioctl/__init__.py'...
***   File "./lib/python3.5/site-packages/infi/diskmanagement/ioctl/__init__.py", line 58
    except infi.wioctl.api.WindowsException, e:
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/infi/diskmanagement/mount_manager'...
Compiling './lib/python3.5/site-packages/infi/diskmanagement/mount_manager/__init__.py'...
***   File "./lib/python3.5/site-packages/infi/diskmanagement/mount_manager/__init__.py", line 113
    except WindowsException, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/infi/diskmanagement/wmi'...
Listing './lib/python3.5/site-packages/infi/diskmanagement/wmi/model'...
Compiling './lib/python3.5/site-packages/infi/diskmanagement/wmi/model/tests.py'...
***   File "./lib/python3.5/site-packages/infi/diskmanagement/wmi/model/tests.py", line 24
    self.assertGreater(len(partitions_by_drive[ur"\\.\PHYSICALDRIVE0"]), 0)
                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/infi/diskmanagement/wmi/tests'...
Listing './lib/python3.5/site-packages/infi/exceptools'...
Listing './lib/python3.5/site-packages/infi/instruct'...
Listing './lib/python3.5/site-packages/infi/instruct/buffer'...
Listing './lib/python3.5/site-packages/infi/instruct/buffer/reference'...
Listing './lib/python3.5/site-packages/infi/instruct/struct'...
Listing './lib/python3.5/site-packages/infi/instruct/utils'...
Listing './lib/python3.5/site-packages/infi/pyutils'...
Listing './lib/python3.5/site-packages/infi/pyutils/functors'...
Listing './lib/python3.5/site-packages/infi/wioctl'...
Listing './lib/python3.5/site-packages/infi/wmi'...
Listing './lib/python3.5/site-packages/infi.cwrap-0.2.12.egg-info'...
Listing './lib/python3.5/site-packages/infi.devicemanager-0.2.19.egg-info'...
Listing './lib/python3.5/site-packages/infi.diskmanagement-0.3.13.egg-info'...
Listing './lib/python3.5/site-packages/infi.exceptools-0.2.13.egg-info'...
Listing './lib/python3.5/site-packages/infi.instruct-0.6.31.egg-info'...
Listing './lib/python3.5/site-packages/infi.pyutils-1.1.3.egg-info'...
Listing './lib/python3.5/site-packages/infi.wioctl-0.1.13.egg-info'...
Listing './lib/python3.5/site-packages/infi.wmi-0.1.28.egg-info'...
Listing './lib/python3.5/site-packages/logbook'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/packaging'...
Listing './lib/python3.5/site-packages/packaging-16.8.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/waiting'...
Listing './lib/python3.5/site-packages/waiting-1.4.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
